# bitprotector

./: .actrc  .gitignore  Cargo.toml  Initial-requirement.md  LICENSE  README.md  backend-implementation-plan.md  frontend-implementation-plan.md  release.toml
.github/actions/setup-frontend/: action.yml
.github/actions/setup-qemu/: action.yml
.github/actions/setup-rust/: action.yml
.github/agents/: ci-troubleshoot.agent.md  docs.agent.md  fix.agent.md  test-workflow.agent.md
.github/codeql/: codeql-config.yml
.github/prompts/: plan-ciNightlyWorkflowOptimization.prompt.md
.github/workflows/: ci.yml  codeql.yml  nightly-verify-5x.yml  nightly.yml  release.yml
config/: default.toml
docker/: Dockerfile.deb-builder
docs/: API.md  ARCHITECTURE.md  BUILDING.md  CI.md  CONFIGURATION.md  TESTING.md  TEST_COVERAGE_PLAN.md  TEST_COVERAGE_PROGRESS.md  blake3-optimization-plan.md
docs/initial/: Initial-requirement.md  README.md  frontend-implementation-plan.md
docs/testing/: README.md  running.md  unit-tests.md
docs/testing/frontend/: README.md  e2e.md  unit.md
docs/testing/installation/: README.md  bundles.md
docs/testing/integration/: README.md  api.md  cli.md  core.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/playwright/.auth/: testuser.json
frontend/src/: App.tsx  test-setup.ts
frontend/src/api/: auth.test.ts  auth.ts  client.test.ts  client.ts  database.test.ts  database.ts  drives.test.ts  drives.ts  files.test.ts  files.ts  filesystem.test.ts  filesystem.ts  folders.test.ts  folders.ts  integrity.test.ts  integrity.ts  logs.test.ts  logs.ts  scheduler.test.ts  scheduler.ts  status.test.ts  status.ts  sync.test.ts  sync.ts  tracking.test.ts  tracking.ts  virtual-paths.test.ts  virtual-paths.ts
frontend/src/components/dashboard/: QuickActions.test.tsx  QuickActions.tsx  RecentActivity.test.tsx  RecentActivity.tsx  StatusOverview.test.tsx  StatusOverview.tsx
frontend/src/components/drives/: DriveCard.test.tsx  DriveCard.tsx  DriveForm.test.tsx  DriveForm.tsx  ReplacementWorkflow.test.tsx  ReplacementWorkflow.tsx
frontend/src/components/file-browser/: BreadcrumbNav.test.tsx  BreadcrumbNav.tsx  FileActions.test.tsx  FileActions.tsx  FileDetails.test.tsx  FileDetails.tsx  FileGrid.tsx  FileRow.test.tsx  FileRow.tsx  FileTree.tsx
frontend/src/components/layout/: Header.tsx  (+5 more)
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useDebounce.test.ts  usePagination.test.ts  usePagination.ts  usePolling.test.ts  usePolling.ts
frontend/src/lib/: format.test.ts  format.ts  path.test.ts  path.ts  use-theme.test.ts  use-theme.ts  utils.test.ts  utils.ts
frontend/src/pages/: DashboardPage.test.tsx  DashboardPage.tsx  DatabaseBackupsPage.test.tsx  DatabaseBackupsPage.tsx  DrivesPage.test.tsx  DrivesPage.tsx  FileBrowserPage.test.tsx  FileBrowserPage.tsx  FoldersPage.test.tsx  FoldersPage.tsx  IntegrityPage.test.tsx  IntegrityPage.tsx  LoginPage.test.tsx  LoginPage.tsx  LogsPage.test.tsx  LogsPage.tsx  SchedulerPage.test.tsx  SchedulerPage.tsx  SyncQueuePage.test.tsx  SyncQueuePage.tsx  TrackingWorkspacePage.test.tsx  TrackingWorkspacePage.tsx  VirtualPathManagerPage.test.tsx  VirtualPathManagerPage.tsx
frontend/src/stores/: auth-store.test.ts  auth-store.ts  drives-store.test.ts  drives-store.ts  files-store.ts  logs-store.test.ts  logs-store.ts  status-store.ts  sync-store.test.ts  sync-store.ts  theme-store.test.ts  theme-store.ts  virtual-paths-store.ts
frontend/src/styles/: globals.css
frontend/src/test/: factories.ts  render.tsx
frontend/src/types/: api.ts  auth.ts  database.ts  drive.ts  file.ts  filesystem.ts  folder.ts  integrity.ts  log.ts  scheduler.ts  status.ts  sync.ts  tracking.ts  virtual-path.ts
frontend/tests/e2e/: auth-and-nav.spec.ts  auth.setup.ts  dashboard.spec.ts  database-backups.spec.ts  drives.spec.ts  file-browser.spec.ts  folders.spec.ts  integrity.spec.ts  login.spec.ts  scheduler.spec.ts
packaging/: README  bitprotector.service  config.toml
packaging/pam.d/: bitprotector
packaging/scripts/: postinst  postrm  prerm
proptest-regressions/core/: virtual_path.txt
scripts/: bitprotector-status.sh  build-deb.sh  check-version.sh  ci-local.sh  frontend_qemu_manual.sh  frontend_qemu_prepare.sh  qemu_manual.sh  run-tests.sh  setup-qemu.sh
src/: lib.rs  main.rs
src/api/: auth.rs  mod.rs  models.rs  path_resolution.rs  server.rs
src/api/routes/: auth.rs  database.rs  drives.rs  files.rs  filesystem.rs  folders.rs  integrity.rs  logs.rs  mod.rs  scheduler.rs  status.rs  sync.rs  tracking.rs  virtual_paths.rs
src/cli/: mod.rs  ssh_status.rs
src/cli/commands/: database.rs  drives.rs  files.rs  folders.rs  integrity.rs  logs.rs  mod.rs  scheduler.rs  sync.rs  virtual_paths.rs
src/core/: change_detection.rs  checksum.rs  drive.rs  integrity.rs  integrity_runs.rs  mirror.rs  mod.rs  scheduler.rs  sync_queue.rs  system.rs  tracker.rs  virtual_path.rs
src/db/: backup.rs  mod.rs  repository.rs  schema.rs
src/logging/: event_logger.rs
tests/installation/: e2e-guest.sh  qemu_failover_test.sh  qemu_test.sh  qemu_uninstall_test.sh
tests/installation/bundles/: application_workflows.sh  degraded_boot.sh  drive_media_type.sh  failover.sh  resilience.sh  scale.sh  scale_lowmem.sh  scheduled_load.sh  smoke.sh  uninstall.sh  upgrade.sh
tests/installation/lib/: cloud-init-db-disk.sh  qemu-helpers.sh  scenarios.sh  snapshots.sh
tests/integration/: api_database.rs  api_drives.rs  api_files.rs  api_filesystem_browser.rs  api_folders.rs  api_integrity.rs  api_logs.rs  api_routes.rs  api_scheduler.rs  api_sync.rs  api_virtual_paths.rs  cli_auth.rs  cli_database.rs  cli_drives.rs  cli_files.rs  cli_folders.rs  cli_integrity.rs  cli_logs.rs  cli_status.rs  cli_sync.rs  cli_virtual_paths.rs  core_change_detection.rs  core_checksum_strategy.rs  core_mirror.rs  core_scheduler.rs  packaging.rs  scaling_100k.rs
tests/integration/common/: mod.rs
(+80 files in other folders)
