[package]
name = "bitprotector"
version = "0.1.0"
edition = "2021"
authors = ["BitProtector Authors"]
description = "Distributed File Mirror and Integrity Protection System"
license = "MIT"

[[bin]]
name = "bitprotector"
path = "src/main.rs"

[lib]
name = "bitprotector_lib"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-rt = "2"
actix-cors = "0.7"
futures-util = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Checksum
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Scheduler
tokio-cron-scheduler = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9"
pam = "0.8"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
actix-tls = { version = "3", features = ["rustls-0_23"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# File watching
notify = "6"

# Config
toml = "0.8"
config = "0.14"

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[[test]]
name = "cli_drives"
path = "tests/integration/cli_drives.rs"

[[test]]
name = "cli_files"
path = "tests/integration/cli_files.rs"

[[test]]
name = "cli_integrity"
path = "tests/integration/cli_integrity.rs"

[[test]]
name = "cli_virtual_paths"
path = "tests/integration/cli_virtual_paths.rs"

[[test]]
name = "cli_folders"
path = "tests/integration/cli_folders.rs"

[[test]]
name = "cli_sync"
path = "tests/integration/cli_sync.rs"

[[test]]
name = "cli_logs"
path = "tests/integration/cli_logs.rs"

[[test]]
name = "cli_database"
path = "tests/integration/cli_database.rs"

[[test]]
name = "cli_auth"
path = "tests/integration/cli_auth.rs"

[[test]]
name = "cli_status"
path = "tests/integration/cli_status.rs"

[profile.release]
opt-level = 3
lto = true
