[package]
name = "bitprotector"
version = "0.1.0"
edition = "2021"
authors = ["BitProtector Authors"]
description = "Distributed File Mirror and Integrity Protection System"
license = "MIT"

[[bin]]
name = "bitprotector"
path = "src/main.rs"

[lib]
name = "bitprotector_lib"
path = "src/lib.rs"

[dependencies]
# Web framework
actix-web = { version = "4", features = ["rustls-0_23"] }
actix-rt = "2"
actix-cors = "0.7"
actix-files = "0.6"
futures-util = "0.3"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Checksum
blake3 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Scheduler
cron = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9"
pam = "0.8"

# TLS
rustls = "0.23"
rustls-pemfile = "2"
actix-tls = { version = "3", features = ["rustls-0_23"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# File watching
notify = "6"

# Config
toml = "0.8"
config = "0.14"

[dev-dependencies]
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[[test]]
name = "cli_drives"
path = "tests/integration/cli_drives.rs"

[[test]]
name = "cli_files"
path = "tests/integration/cli_files.rs"

[[test]]
name = "cli_integrity"
path = "tests/integration/cli_integrity.rs"

[[test]]
name = "cli_virtual_paths"
path = "tests/integration/cli_virtual_paths.rs"

[[test]]
name = "cli_folders"
path = "tests/integration/cli_folders.rs"

[[test]]
name = "cli_sync"
path = "tests/integration/cli_sync.rs"

[[test]]
name = "cli_logs"
path = "tests/integration/cli_logs.rs"

[[test]]
name = "cli_database"
path = "tests/integration/cli_database.rs"

[[test]]
name = "cli_auth"
path = "tests/integration/cli_auth.rs"

[[test]]
name = "cli_status"
path = "tests/integration/cli_status.rs"

[[test]]
name = "packaging"
path = "tests/integration/packaging.rs"

[[test]]
name = "api_routes"
path = "tests/integration/api_routes.rs"

[[test]]
name = "core_mirror"
path = "tests/integration/core_mirror.rs"

[[test]]
name = "core_change_detection"
path = "tests/integration/core_change_detection.rs"

[[test]]
name = "core_scheduler"
path = "tests/integration/core_scheduler.rs"

[package.metadata.deb]
name = "bitprotector"
maintainer = "BitProtector Authors <bitprotector@example.com>"
copyright = "2024, BitProtector Authors"
license-file = ["LICENSE", "4"]
extended-description = """\
Distributed File Mirror and Integrity Protection System.
Monitors files across redundant storage, detects corruption,
and automatically recovers from mirror copies."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/bitprotector", "usr/bin/bitprotector", "755"],
    ["packaging/config.toml", "etc/bitprotector/config.toml", "644"],
    ["packaging/bitprotector.service", "lib/systemd/system/bitprotector.service", "644"],
    ["scripts/bitprotector-status.sh", "etc/profile.d/bitprotector-status.sh", "755"],
    ["packaging/README", "usr/share/doc/bitprotector/README", "644"],
    ["frontend/dist/**/*", "var/lib/bitprotector/frontend/", "644"],
]
maintainer-scripts = "packaging/scripts"
systemd-units = { enable = true, start = false }
conf-files = ["/etc/bitprotector/config.toml"]

[profile.release]
opt-level = 3
lto = true
